[gd_scene load_steps=2 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" path="res://scenes/main_menu/MainMenu.gd" id="1_0x0x0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.3, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 150.0
text = "WeenieWorld"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Continue"

[node name="OptionsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
text = "v1.0.0"
horizontal_alignment = 2
vertical_alignment = 2 